--- a/votersApp/src/main/resources/application.properties
+++ b/votersApp/src/main/resources/application.properties
@@ -1,19 +1,31 @@
-server.port=8080
+server.port=9090
 
-# setup local h2 database config
-spring.datasource.url=jdbc:h2:file:./data/demo
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=admin
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+## setup local h2 database config
+#spring.datasource.url=jdbc:h2:file:./data/demo
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#
+## setup local h2 database console
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+#spring.h2.console.settings.web-allow-others=false
+#
+#spring.thymeleaf.cache=false
+#
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#
+#spring.config.import=secrets.properties
 
 
-# setup local h2 database console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.h2.console.settings.web-allow-others=false
 
-spring.thymeleaf.cache=false
+spring.datasource.url=jdbc:mysql://localhost/voters_app?createDatabaseIfNotExist=true
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=true
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type=TRACE
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.config.import=secrets.properties
